--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
 </body>
 
 <!-- Vendor -->
+<script src="/client/js/vendor/lodash.js"></script>
 <script src="/client/js/vendor/angular.min.js"></script>
 <script src="/client/js/vendor/angular-animate.min.js"></script>
 <script src="/client/js/vendor/angular-sanitize.min.js"></script>
