--- a/client/js/asiento/asiento.html
+++ b/client/js/asiento/asiento.html
@@ -1,25 +1,28 @@
 <div class="span8 offset2">
-    <div class="row-fluid well" ng-repeat="asiento in asientos">
+    <div class="form-search well-small">
+      Filtros:
+      <input type="text" class="input-medium search-query" ng-model="textFilter" placeholder="Ingrese su búsqueda">
+      <button class="btn" ng-model="orderByDate" ng-click="toggleDate()">Fecha</button>
+    </div>
+    <div class="row-fluid well" ng-repeat="(key, asientos) in grupoAsientos">
         <legend>
-            <h3>Asiento del día {{asiento.date | date:'shortDate'}}</h3>
+            <h3>Asientos del día {{key}}</h3>
         </legend>
-        <table class="table table-bordered table-hover">
-                <thead>
-                <tr>
-                    <th>Fecha</th>
-                    <th>Descripcion</th>
-                    <th>Debe</th>
-                    <th>Haber</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="movimiento in asiento.movimientos">
-                    <td>{{movimiento.date | date:'shortDate'}}</td>
-                    <td>{{movimiento.cuenta}}</td>
-                    <td><span ng-show="movimientoTipo('debe',movimiento.tipo)">{{movimiento.monto | currency}}</span></td>
-                    <td><span ng-show="movimientoTipo('haber',movimiento.tipo)">{{movimiento.monto | currency}}</span></td>
-                </tr>
-                </tbody>
-            </table>
+        <table class="table table-bordered table-hover table-asiento">
+            <tbody ng-repeat="asiento in asientos | orderBy:orderByDate | filter:textFilter">
+              <tr>
+                <th>Hora</th>
+                <th>Descripción</th>
+                <th>Debe</th>
+                <th>Haber</th>
+              </tr>
+              <tr ng-repeat="movimiento in asiento.movimientos">
+                  <td>{{movimiento.date | date:'h:mm a'}}</td>
+                  <td>{{movimiento.cuenta}}</td>
+                  <td><span ng-show="movimientoTipo('debe',movimiento.tipo)">{{movimiento.monto | currency}}</span></td>
+                  <td><span ng-show="movimientoTipo('haber',movimiento.tipo)">{{movimiento.monto | currency}}</span></td>
+              </tr>
+            </tbody>
+        </table>
     </div>
 </div>
